// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityFeedCard when a New OMIS order is added should render an activity card 1`] = `
<div
  className="sc-hORach iKNari"
>
  <div
    className="sc-bMVAic epiyOU"
  >
    <h3
      className="sc-GMQeP danEmM sc-cMljjf kCLKvB"
      size="MEDIUM"
    >
      New Order (OMIS) added
    </h3>
    <h3
      className="sc-iujRgT cqnRWG sc-cMljjf kCLKvB"
      size="MEDIUM"
    >
      <a
        className="sc-bwzfXH VXMCV"
        href="https://www.datahub.dev.uktrade.io/omis/504b7a34-c083-4e7a-998b-61cbe7b6b269"
        muted={false}
      >
        EYX193/17
      </a>
    </h3>
    <details
      className="sc-bAeIUo Flahq sc-kEYyzF ihcnje"
      open={false}
    >
      <summary
        className="sc-kkGfuU cCdZFh"
      >
        <span
          className="sc-iAyFgw jRkIxn"
        >
          View key details and people for this order
        </span>
      </summary>
      <div
        className="sc-hSdWYo dfimje"
      >
        <table
          className="sc-daURTG eRKlwG sc-bwCtUz iVExri"
        >
          <tbody
            className="sc-eXEjpC fuVqJC"
          >
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Country
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                Bahamas
              </td>
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                UK region
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                South East
              </td>
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Added by
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                <span>
                  Test CMU 1
                  , 
                  <a
                    className="sc-bwzfXH VXMCV"
                    href="mailto:cmuuser1test@mobile.ukti.gov.uk"
                    muted={false}
                  >
                    cmuuser1test@mobile.ukti.gov.uk
                  </a>
                </span>
              </td>
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Company contact
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                <span>
                  <a
                    className="sc-bwzfXH VXMCV"
                    href="#"
                    muted={false}
                  >
                    Alysia Tolley
                  </a>
                   (
                  Some job title
                  )
                </span>
              </td>
            </tr>
          </tbody>
        </table>
        <a
          className="sc-bwzfXH VXMCV"
          href="https://www.datahub.dev.uktrade.io/omis/504b7a34-c083-4e7a-998b-61cbe7b6b269"
          muted={false}
        >
          Go to the order detail page
        </a>
      </div>
    </details>
  </div>
  <div
    className="sc-exAgwC bLFBla"
  >
    20 Jul 2017
  </div>
</div>
`;

exports[`ActivityFeedCard when an investment project is CTI should render the CTI investment project activity card 1`] = `
<div
  className="sc-cmthru jjutsD"
>
  <div
    className="sc-hMFtBS jNzJDC"
  >
    <div
      className="sc-cLQEGU jRpfLR"
    >
      <h3
        className="sc-cMljjf kCLKvB"
        size="MEDIUM"
      >
        New investment project added
         - 
        Commitment to invest
      </h3>
      <span>
        23 May 2017
      </span>
    </div>
    <h3
      className="sc-cMljjf kCLKvB"
      size="MEDIUM"
    >
      <a
        className="sc-bwzfXH VXMCV"
        href="https://www.datahub.dev.uktrade.io/investments/projects/8f2662e9-0691-435f-8edd-7fb9df9d8936"
        muted={false}
      >
        Aphrodite Mcdonald
      </a>
    </h3>
  </div>
  <details
    className="sc-gqPbQI fSzgwk sc-kEYyzF ihcnje"
    open={false}
  >
    <summary
      className="sc-kkGfuU cCdZFh"
    >
      <span
        className="sc-iAyFgw jRkIxn"
      >
        Key details and people for this project
      </span>
    </summary>
    <div
      className="sc-hSdWYo dfimje"
    >
      <table
        className="sc-bwCtUz iVExri"
      >
        <tbody
          className="sc-eXEjpC fuVqJC"
        >
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Investment Type
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              Commitment to invest
            </td>
          </tr>
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Estimated land date
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              01 Oct 1973
            </td>
          </tr>
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Company contact(s)
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <span>
                <a
                  className="sc-bwzfXH VXMCV"
                  href="#"
                  muted={false}
                >
                  Reece Stevens
                </a>
                 (
                Some job title
                )
              </span>
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-bwzfXH VXMCV"
        href="https://www.datahub.dev.uktrade.io/investments/projects/8f2662e9-0691-435f-8edd-7fb9df9d8936"
        muted={false}
      >
        Go to the investment project detail page
      </a>
    </div>
  </details>
</div>
`;

exports[`ActivityFeedCard when an investment project is FDI should render the FDI investment project activity card 1`] = `
<div
  className="sc-cmthru jjutsD"
>
  <div
    className="sc-hMFtBS jNzJDC"
  >
    <div
      className="sc-cLQEGU jRpfLR"
    >
      <h3
        className="sc-cMljjf kCLKvB"
        size="MEDIUM"
      >
        New investment project added
         - 
        FDI
      </h3>
      <span>
        05 Mar 2017
      </span>
    </div>
    <h3
      className="sc-cMljjf kCLKvB"
      size="MEDIUM"
    >
      <a
        className="sc-bwzfXH VXMCV"
        href="https://www.datahub.dev.uktrade.io/investments/projects/3520b973-0e77-46cf-be75-3585f2f6691e"
        muted={false}
      >
        Wig factory
      </a>
    </h3>
  </div>
  <details
    className="sc-gqPbQI fSzgwk sc-kEYyzF ihcnje"
    open={false}
  >
    <summary
      className="sc-kkGfuU cCdZFh"
    >
      <span
        className="sc-iAyFgw jRkIxn"
      >
        Key details and people for this project
      </span>
    </summary>
    <div
      className="sc-hSdWYo dfimje"
    >
      <table
        className="sc-bwCtUz iVExri"
      >
        <tbody
          className="sc-eXEjpC fuVqJC"
        >
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Investment Type
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              FDI
            </td>
          </tr>
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Estimated land date
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              01 Jan 2020
            </td>
          </tr>
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Company contact(s)
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <span>
                <a
                  className="sc-bwzfXH VXMCV"
                  href="#"
                  muted={false}
                >
                  Dean Cox
                </a>
                 (
                Some job title
                )
              </span>
            </td>
          </tr>
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Total Investment
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              £1,000,000
            </td>
          </tr>
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Capital expenditure value
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              £200,000
            </td>
          </tr>
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Gross value added (GVA)
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              £11,620
            </td>
          </tr>
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Number of new jobs
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              15,400
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-bwzfXH VXMCV"
        href="https://www.datahub.dev.uktrade.io/investments/projects/3520b973-0e77-46cf-be75-3585f2f6691e"
        muted={false}
      >
        Go to the investment project detail page
      </a>
    </div>
  </details>
</div>
`;

exports[`ActivityFeedCard when an investment project is Non-FDI should render the Non-FDI investment project activity card 1`] = `
<div
  className="sc-cmthru jjutsD"
>
  <div
    className="sc-hMFtBS jNzJDC"
  >
    <div
      className="sc-cLQEGU jRpfLR"
    >
      <h3
        className="sc-cMljjf kCLKvB"
        size="MEDIUM"
      >
        New investment project added
         - 
        Non-FDI
      </h3>
      <span>
        03 Oct 2017
      </span>
    </div>
    <h3
      className="sc-cMljjf kCLKvB"
      size="MEDIUM"
    >
      <a
        className="sc-bwzfXH VXMCV"
        href="https://www.datahub.dev.uktrade.io/investments/projects/ff4005e5-f769-43cb-a46f-a483ec20eda7"
        muted={false}
      >
        Refined Rubber Chicken
      </a>
    </h3>
  </div>
  <details
    className="sc-gqPbQI fSzgwk sc-kEYyzF ihcnje"
    open={false}
  >
    <summary
      className="sc-kkGfuU cCdZFh"
    >
      <span
        className="sc-iAyFgw jRkIxn"
      >
        Key details and people for this project
      </span>
    </summary>
    <div
      className="sc-hSdWYo dfimje"
    >
      <table
        className="sc-bwCtUz iVExri"
      >
        <tbody
          className="sc-eXEjpC fuVqJC"
        >
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Investment Type
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              Non-FDI
            </td>
          </tr>
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Added by
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <span>
                Test CMU 1
                , 
                <a
                  className="sc-bwzfXH VXMCV"
                  href="mailto:cmuuser1test@mobile.ukti.gov.uk"
                  muted={false}
                >
                  cmuuser1test@mobile.ukti.gov.uk
                </a>
              </span>
            </td>
          </tr>
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Estimated land date
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              01 Dec 2018
            </td>
          </tr>
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Company contact(s)
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <span>
                <a
                  className="sc-bwzfXH VXMCV"
                  href="#"
                  muted={false}
                >
                  Ruthie Cole
                </a>
                 (
                Some job title
                )
              </span>
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-bwzfXH VXMCV"
        href="https://www.datahub.dev.uktrade.io/investments/projects/ff4005e5-f769-43cb-a46f-a483ec20eda7"
        muted={false}
      >
        Go to the investment project detail page
      </a>
    </div>
  </details>
</div>
`;

exports[`ActivityFeedCard when the interaction does not have a service should render interaction activity without services 1`] = `
<div
  className="sc-hORach iKNari"
>
  <div
    className="sc-bMVAic epiyOU"
  >
    <h3
      className="sc-iujRgT cqnRWG sc-cMljjf kCLKvB"
      size="MEDIUM"
    >
      <a
        className="sc-bwzfXH VXMCV"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
        muted={false}
      >
        Invited to Technology Roundtable
      </a>
    </h3>
    <details
      className="sc-bAeIUo Flahq sc-kEYyzF ihcnje"
      open={false}
    >
      <summary
        className="sc-kkGfuU cCdZFh"
      >
        <span
          className="sc-iAyFgw jRkIxn"
        >
          View interaction details
        </span>
      </summary>
      <div
        className="sc-hSdWYo dfimje"
      >
        <table
          className="sc-daURTG eRKlwG sc-bwCtUz iVExri"
        >
          <tbody
            className="sc-eXEjpC fuVqJC"
          >
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Contact(s)
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              />
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Adviser(s)
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              />
            </tr>
          </tbody>
        </table>
        <a
          className="sc-bwzfXH VXMCV"
          href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
          muted={false}
        >
          Go to the interaction detail page
        </a>
      </div>
    </details>
  </div>
  <div
    className="sc-exAgwC bLFBla"
  >
    06 Jun 2019
    <div
      className="sc-cQFLBn fHFhni"
    >
      <span
        className="sc-gojNiO bqdgIh"
      >
        Completed interaction
      </span>
    </div>
  </div>
</div>
`;

exports[`ActivityFeedCard when the interaction is a draft and archived should render interaction activity with "Cancelled interaction" badge 1`] = `
<div
  className="sc-hORach iKNari"
>
  <div
    className="sc-bMVAic epiyOU"
  >
    <h3
      className="sc-iujRgT cqnRWG sc-cMljjf kCLKvB"
      size="MEDIUM"
    >
      <a
        className="sc-bwzfXH VXMCV"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
        muted={false}
      >
        Invited to Technology Roundtable
      </a>
    </h3>
    <details
      className="sc-bAeIUo Flahq sc-kEYyzF ihcnje"
      open={false}
    >
      <summary
        className="sc-kkGfuU cCdZFh"
      >
        <span
          className="sc-iAyFgw jRkIxn"
        >
          View interaction details
        </span>
      </summary>
      <div
        className="sc-hSdWYo dfimje"
      >
        <table
          className="sc-daURTG eRKlwG sc-bwCtUz iVExri"
        >
          <tbody
            className="sc-eXEjpC fuVqJC"
          >
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Contact(s)
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                <span>
                  John Doe
                  , 
                  <a
                    className="sc-bwzfXH VXMCV"
                    href="mailto:john@example.com"
                    muted={false}
                  >
                    john@example.com
                  </a>
                </span>
              </td>
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Adviser(s)
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                <span>
                  Mario Bros
                  , 
                  <a
                    className="sc-bwzfXH VXMCV"
                    href="mailto:mariobros@dit.com"
                    muted={false}
                  >
                    mariobros@dit.com
                  </a>
                </span>
              </td>
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Services
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                Account Management
              </td>
            </tr>
          </tbody>
        </table>
        <a
          className="sc-bwzfXH VXMCV"
          href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
          muted={false}
        >
          Go to the interaction detail page
        </a>
      </div>
    </details>
  </div>
  <div
    className="sc-exAgwC bLFBla"
  >
    06 Jun 2019
    <div
      className="sc-cQFLBn fHFhni"
    >
      <span
        className="sc-gojNiO bqdgIh"
      >
        Cancelled interaction
      </span>
    </div>
  </div>
</div>
`;

exports[`ActivityFeedCard when the interaction is a draft and upcoming should render interaction activity with "Upcoming interaction" badge 1`] = `
<div
  className="sc-hORach jvSxVN"
>
  <div
    className="sc-bMVAic epiyOU"
  >
    <h3
      className="sc-iujRgT cqnRWG sc-cMljjf kCLKvB"
      size="MEDIUM"
    >
      <a
        className="sc-bwzfXH VXMCV"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
        muted={false}
      >
        Invited to Technology Roundtable
      </a>
    </h3>
    <details
      className="sc-bAeIUo Flahq sc-kEYyzF ihcnje"
      open={false}
    >
      <summary
        className="sc-kkGfuU cCdZFh"
      >
        <span
          className="sc-iAyFgw jRkIxn"
        >
          View interaction details
        </span>
      </summary>
      <div
        className="sc-hSdWYo dfimje"
      >
        <table
          className="sc-daURTG eRKlwG sc-bwCtUz iVExri"
        >
          <tbody
            className="sc-eXEjpC fuVqJC"
          >
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Contact(s)
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                <span>
                  John Doe
                  , 
                  <a
                    className="sc-bwzfXH VXMCV"
                    href="mailto:john@example.com"
                    muted={false}
                  >
                    john@example.com
                  </a>
                </span>
              </td>
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Adviser(s)
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                <span>
                  Mario Bros
                  , 
                  <a
                    className="sc-bwzfXH VXMCV"
                    href="mailto:mariobros@dit.com"
                    muted={false}
                  >
                    mariobros@dit.com
                  </a>
                </span>
              </td>
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Services
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                Account Management
              </td>
            </tr>
          </tbody>
        </table>
        <a
          className="sc-bwzfXH VXMCV"
          href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
          muted={false}
        >
          Go to the interaction detail page
        </a>
      </div>
    </details>
  </div>
  <div
    className="sc-exAgwC bLFBla"
  >
    06 Jun 2019
    <div
      className="sc-cQFLBn fHFhni"
    >
      <span
        className="sc-gojNiO bqdgIh"
      >
        Upcoming interaction
      </span>
    </div>
  </div>
</div>
`;

exports[`ActivityFeedCard when the interaction is a draft in the past should render interaction activity with "Incomplete interaction" badge 1`] = `
<div
  className="sc-hORach iKNari"
>
  <div
    className="sc-bMVAic epiyOU"
  >
    <h3
      className="sc-iujRgT cqnRWG sc-cMljjf kCLKvB"
      size="MEDIUM"
    >
      <a
        className="sc-bwzfXH VXMCV"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
        muted={false}
      >
        Invited to Technology Roundtable
      </a>
    </h3>
    <details
      className="sc-bAeIUo Flahq sc-kEYyzF ihcnje"
      open={false}
    >
      <summary
        className="sc-kkGfuU cCdZFh"
      >
        <span
          className="sc-iAyFgw jRkIxn"
        >
          View interaction details
        </span>
      </summary>
      <div
        className="sc-hSdWYo dfimje"
      >
        <table
          className="sc-daURTG eRKlwG sc-bwCtUz iVExri"
        >
          <tbody
            className="sc-eXEjpC fuVqJC"
          >
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Contact(s)
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                <span>
                  John Doe
                  , 
                  <a
                    className="sc-bwzfXH VXMCV"
                    href="mailto:john@example.com"
                    muted={false}
                  >
                    john@example.com
                  </a>
                </span>
              </td>
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Adviser(s)
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                <span>
                  Mario Bros
                  , 
                  <a
                    className="sc-bwzfXH VXMCV"
                    href="mailto:mariobros@dit.com"
                    muted={false}
                  >
                    mariobros@dit.com
                  </a>
                </span>
              </td>
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Services
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                Account Management
              </td>
            </tr>
          </tbody>
        </table>
        <a
          className="sc-bwzfXH VXMCV"
          href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
          muted={false}
        >
          Go to the interaction detail page
        </a>
      </div>
    </details>
  </div>
  <div
    className="sc-exAgwC bLFBla"
  >
    05 Jun 2018
    <div
      className="sc-cQFLBn fHFhni"
    >
      <span
        className="sc-gojNiO bqdgIh"
      >
        Incomplete interaction
      </span>
    </div>
  </div>
</div>
`;

exports[`ActivityFeedCard when the interaction is complete should render interaction activity with "Completed interaction" badge 1`] = `
<div
  className="sc-hORach iKNari"
>
  <div
    className="sc-bMVAic epiyOU"
  >
    <h3
      className="sc-iujRgT cqnRWG sc-cMljjf kCLKvB"
      size="MEDIUM"
    >
      <a
        className="sc-bwzfXH VXMCV"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
        muted={false}
      >
        Invited to Technology Roundtable
      </a>
    </h3>
    <details
      className="sc-bAeIUo Flahq sc-kEYyzF ihcnje"
      open={false}
    >
      <summary
        className="sc-kkGfuU cCdZFh"
      >
        <span
          className="sc-iAyFgw jRkIxn"
        >
          View interaction details
        </span>
      </summary>
      <div
        className="sc-hSdWYo dfimje"
      >
        <table
          className="sc-daURTG eRKlwG sc-bwCtUz iVExri"
        >
          <tbody
            className="sc-eXEjpC fuVqJC"
          >
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Contact(s)
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                <span>
                  John Doe
                  , 
                  <a
                    className="sc-bwzfXH VXMCV"
                    href="mailto:john@example.com"
                    muted={false}
                  >
                    john@example.com
                  </a>
                </span>
              </td>
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Adviser(s)
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                <span>
                  Mario Bros
                  , 
                  <a
                    className="sc-bwzfXH VXMCV"
                    href="mailto:mariobros@dit.com"
                    muted={false}
                  >
                    mariobros@dit.com
                  </a>
                </span>
              </td>
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Services
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                Account Management
              </td>
            </tr>
          </tbody>
        </table>
        <a
          className="sc-bwzfXH VXMCV"
          href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
          muted={false}
        >
          Go to the interaction detail page
        </a>
      </div>
    </details>
  </div>
  <div
    className="sc-exAgwC bLFBla"
  >
    06 Jun 2019
    <div
      className="sc-cQFLBn fHFhni"
    >
      <span
        className="sc-gojNiO bqdgIh"
      >
        Completed interaction
      </span>
    </div>
  </div>
</div>
`;

exports[`ActivityFeedCard when there is a service delivery should render service delivery activity 1`] = `
<div
  className="sc-hORach iKNari"
>
  <div
    className="sc-bMVAic epiyOU"
  >
    <h3
      className="sc-iujRgT cqnRWG sc-cMljjf kCLKvB"
      size="MEDIUM"
    >
      <a
        className="sc-bwzfXH VXMCV"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/854d8d31-7405-4625-a957-0ed2c3092caa"
        muted={false}
      >
        Openening of overseas office
      </a>
    </h3>
    <details
      className="sc-bAeIUo Flahq sc-kEYyzF ihcnje"
      open={false}
    >
      <summary
        className="sc-kkGfuU cCdZFh"
      >
        <span
          className="sc-iAyFgw jRkIxn"
        >
          View interaction details
        </span>
      </summary>
      <div
        className="sc-hSdWYo dfimje"
      >
        <table
          className="sc-daURTG eRKlwG sc-bwCtUz iVExri"
        >
          <tbody
            className="sc-eXEjpC fuVqJC"
          >
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Contact(s)
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                <span>
                  John Doe
                  , 
                  <a
                    className="sc-bwzfXH VXMCV"
                    href="mailto:john@example.com"
                    muted={false}
                  >
                    john@example.com
                  </a>
                </span>
              </td>
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Adviser(s)
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                <span>
                  Mario Bros
                  , 
                  <a
                    className="sc-bwzfXH VXMCV"
                    href="mailto:mariobros@dit.com"
                    muted={false}
                  >
                    mariobros@dit.com
                  </a>
                </span>
              </td>
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Services
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                Events - Overseas
              </td>
            </tr>
          </tbody>
        </table>
        <a
          className="sc-bwzfXH VXMCV"
          href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/854d8d31-7405-4625-a957-0ed2c3092caa"
          muted={false}
        >
          Go to the interaction detail page
        </a>
      </div>
    </details>
  </div>
  <div
    className="sc-exAgwC bLFBla"
  >
    29 Apr 2019
    <div
      className="sc-cQFLBn fHFhni"
    >
      <span
        className="sc-gojNiO bqdgIh"
      >
        Completed interaction
      </span>
    </div>
  </div>
</div>
`;

exports[`ActivityFeedCard when there is an activity item of arbitrary type should render default activity 1`] = `
<div
  className="sc-bXGyLb rlzKV"
>
  <div
    className="sc-lkqHmb gepgMb"
  >
    <h3
      className="sc-cMljjf kCLKvB"
      size="MEDIUM"
    >
      subject
    </h3>
  </div>
</div>
`;

exports[`ActivityFeedCard when there is an interaction should render interaction activity 1`] = `
<div
  className="sc-hORach iKNari"
>
  <div
    className="sc-bMVAic epiyOU"
  >
    <h3
      className="sc-iujRgT cqnRWG sc-cMljjf kCLKvB"
      size="MEDIUM"
    >
      <a
        className="sc-bwzfXH VXMCV"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
        muted={false}
      >
        Invited to Technology Roundtable
      </a>
    </h3>
    <details
      className="sc-bAeIUo Flahq sc-kEYyzF ihcnje"
      open={false}
    >
      <summary
        className="sc-kkGfuU cCdZFh"
      >
        <span
          className="sc-iAyFgw jRkIxn"
        >
          View interaction details
        </span>
      </summary>
      <div
        className="sc-hSdWYo dfimje"
      >
        <table
          className="sc-daURTG eRKlwG sc-bwCtUz iVExri"
        >
          <tbody
            className="sc-eXEjpC fuVqJC"
          >
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Contact(s)
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                <span>
                  John Doe
                  , 
                  <a
                    className="sc-bwzfXH VXMCV"
                    href="mailto:john@example.com"
                    muted={false}
                  >
                    john@example.com
                  </a>
                </span>
              </td>
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Adviser(s)
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                <span>
                  Mario Bros
                  , 
                  <a
                    className="sc-bwzfXH VXMCV"
                    href="mailto:mariobros@dit.com"
                    muted={false}
                  >
                    mariobros@dit.com
                  </a>
                </span>
              </td>
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Services
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                Account Management
              </td>
            </tr>
          </tbody>
        </table>
        <a
          className="sc-bwzfXH VXMCV"
          href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
          muted={false}
        >
          Go to the interaction detail page
        </a>
      </div>
    </details>
  </div>
  <div
    className="sc-exAgwC bLFBla"
  >
    02 May 2019
    <div
      className="sc-cQFLBn fHFhni"
    >
      <span
        className="sc-gojNiO bqdgIh"
      >
        Completed interaction
      </span>
    </div>
  </div>
</div>
`;

exports[`ActivityFeedCard when there is an interaction without any people involved should render interaction activity without advisers nor contacts 1`] = `
<div
  className="sc-hORach iKNari"
>
  <div
    className="sc-bMVAic epiyOU"
  >
    <h3
      className="sc-iujRgT cqnRWG sc-cMljjf kCLKvB"
      size="MEDIUM"
    >
      <a
        className="sc-bwzfXH VXMCV"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
        muted={false}
      >
        Invited to Technology Roundtable
      </a>
    </h3>
    <details
      className="sc-bAeIUo Flahq sc-kEYyzF ihcnje"
      open={false}
    >
      <summary
        className="sc-kkGfuU cCdZFh"
      >
        <span
          className="sc-iAyFgw jRkIxn"
        >
          View interaction details
        </span>
      </summary>
      <div
        className="sc-hSdWYo dfimje"
      >
        <table
          className="sc-daURTG eRKlwG sc-bwCtUz iVExri"
        >
          <tbody
            className="sc-eXEjpC fuVqJC"
          >
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Contact(s)
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              />
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Adviser(s)
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              />
            </tr>
            <tr
              className="sc-iQKALj ftJWrM"
            >
              <th
                className="sc-RefOD dxRfSY"
                style={
                  Object {
                    "border": 0,
                    "fontWeight": "normal",
                  }
                }
              >
                Services
              </th>
              <td
                className="sc-RefOD gzbQXK"
                style={
                  Object {
                    "border": 0,
                  }
                }
              >
                Account Management
              </td>
            </tr>
          </tbody>
        </table>
        <a
          className="sc-bwzfXH VXMCV"
          href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
          muted={false}
        >
          Go to the interaction detail page
        </a>
      </div>
    </details>
  </div>
  <div
    className="sc-exAgwC bLFBla"
  >
    06 Jun 2019
    <div
      className="sc-cQFLBn fHFhni"
    >
      <span
        className="sc-gojNiO bqdgIh"
      >
        Completed interaction
      </span>
    </div>
  </div>
</div>
`;
